fixed loader positioning on small screens, added new bio for noah, fixed header navbar highlighting on small screens

--- a/app/styles/partials/_about.scss
+++ b/app/styles/partials/_about.scss
@@ -6,6 +6,7 @@ main.about {
 	}
 	position: relative;
 	padding: 55px 27px;
+	width: calc(100% - 54px);
 	background-color: $main-background;
 
 	div.content {
