--- a/app/styles/partials/_header.scss
+++ b/app/styles/partials/_header.scss
@@ -279,6 +279,12 @@ header {
 					text-decoration: none;
 				}
 			}
+			li.active {
+
+				a {
+					color: #ccc;
+				}
+			}
 		}
 		ul.nav-menu.active { display: block; }
 	}
