--- a/app/styles/partials/_main.scss
+++ b/app/styles/partials/_main.scss
@@ -9,6 +9,7 @@ main.main {
 	}
 	position: relative;
 	padding-top: 47px;
+	width: 100%;
 	background: url('https://s3-us-west-2.amazonaws.com/campaignwebsite/endorsements/background.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
