--- a/app/styles/partials/_nav-panel.scss
+++ b/app/styles/partials/_nav-panel.scss
@@ -58,7 +58,7 @@ section.nav-panel {
 				li.active {
 
 					a {
-						color: $accent-color1;;
+						color: $accent-color1;
 					}
 				}
 				li:not(.active):hover {
