--- a/app/styles/partials/_team.scss
+++ b/app/styles/partials/_team.scss
@@ -6,6 +6,7 @@ main.team {
 	}
 	position: relative;
 	padding: 55px 27px;
+	width: calc(100% - 54px);
 	background-color: $main-background;
 
 	ul.js-masonry {
