--- a/app/styles/partials/_vision.scss
+++ b/app/styles/partials/_vision.scss
@@ -6,6 +6,7 @@ main.vision {
 	}
 	position: relative;
 	padding: 55px 27px;
+	width: calc(100% - 54px);
 	background-color: $main-background;
 
 	div.content {
